--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Bienvenido a Cerveza Korper</h1>
+    <script src="./js/item.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
